HashRouter Change over

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project_portfolio_IV",
+  "name": "project_portfolio_iv",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://fsdemo.github.io/cra-deployment-demo",
